--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,62 @@
 {
     "name": "Shapker Bot",
     "short_name": "Shapker",
-    "description": "Панель управления Telegram ботом Shapker",
+    "description": "Профессиональная панель управления Telegram ботом",
     "start_url": "/",
     "display": "standalone",
     "theme_color": "#6366f1",
     "background_color": "#ffffff",
+    "orientation": "portrait",
+    "scope": "/",
+    "categories": ["business", "productivity", "utilities"],
     "icons": [
         {
-            "src": "icon-192.png",
+            "src": "icons/icon-72x72.png",
+            "sizes": "72x72",
+            "type": "image/png"
+        },
+        {
+            "src": "icons/icon-96x96.png",
+            "sizes": "96x96",
+            "type": "image/png"
+        },
+        {
+            "src": "icons/icon-128x128.png",
+            "sizes": "128x128",
+            "type": "image/png"
+        },
+        {
+            "src": "icons/icon-144x144.png",
+            "sizes": "144x144",
+            "type": "image/png"
+        },
+        {
+            "src": "icons/icon-152x152.png",
+            "sizes": "152x152",
+            "type": "image/png"
+        },
+        {
+            "src": "icons/icon-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "icon-512.png",
+            "src": "icons/icon-384x384.png",
+            "sizes": "384x384",
+            "type": "image/png"
+        },
+        {
+            "src": "icons/icon-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
+        }
+    ],
+    "screenshots": [
+        {
+            "src": "screenshots/mobile.png",
+            "sizes": "375x667",
+            "type": "image/png",
+            "form_factor": "narrow"
         }
     ]
 }
